<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/title_text_View"
        style="@style/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingrese sus notas a continuación: "
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        app:srcCompat="@drawable/nota" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nota_lab_edit_text"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/note_lab"
        android:inputType="number|numberDecimal"
        android:padding="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nota_primer_avance_edit_text"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/first_advance"
        android:inputType="number|numberDecimal"
        android:padding="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nota_segundo_avance_edit_text"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/second_advance"
        android:inputType="number|numberDecimal"
        android:padding="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/entrega_proyecto_final_edit_text"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/final_project_delivery"
        android:inputType="number|numberDecimal"
        android:padding="8dp" />

    <Button
        android:id="@+id/calculate_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculatenote"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_nota_final"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/final_note" />

        <TextView
            android:id="@+id/note_final_text_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:textColor="#F44336"
            android:textSize="60sp" />
    </LinearLayout>


</LinearLayout>